# eideticadb

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  Taskfile.yml  cliff.toml  deny.toml  flake.nix
.github/workflows/: codeberg.yml  coverage.yml  deploy-docs.yml  release-plz.yml  rust.yml
crates/lib/: Cargo.toml
crates/lib/benches/: benchmarks.rs
crates/lib/src/: atomicop.rs  basedb.rs  entry.rs  lib.rs  tree.rs
crates/lib/src/auth/: mod.rs  settings.rs  types.rs  validation.rs
crates/lib/src/backend/: in_memory.rs  mod.rs
crates/lib/src/data/: mod.rs
crates/lib/src/subtree/: kvstore.rs  rowstore.rs
crates/lib/tests/it/: atomicop.rs  auth_integration.rs  backend.rs  basedb.rs  cache.rs  helpers.rs  main.rs
docs/: book.toml
docs/src/: SUMMARY.md  index.md
docs/src/design/: authentication.md  index.md
docs/src/internal/: crdt_principles.md  data_flow.md  error_handling.md  future_development.md  index.md  overview.md  performance.md  testing.md
docs/src/internal/core_components/: backend.md  basedb_tree.md  crdt.md  entry.md  index.md  subtrees.md
docs/src/user_guide/: core_concepts.md  examples_snippets.md  getting_started.md  index.md  introduction.md  operations.md  tutorial_todo_app.md
docs/src/user_guide/concepts/: backends.md  entries_trees.md  subtrees.md
examples/todo/: Cargo.toml  README.md  test.sh
examples/todo/src/: main.rs  model.rs
src/: atomicop.rs  backend.rs  basedb.rs  constants.rs  entry.rs  id.rs  lib.rs  main.rs  subtree.rs  tree.rs
src/auth/: crypto.rs  mod.rs  types.rs  validation.rs
src/backend/: in_memory.rs  mod.rs
src/data/: mod.rs  types.rs
src/subtree/: kvstore.rs  mod.rs  rowstore.rs  yrsstore.rs
tests/: basedb_test.rs
tests/it/: atomicop.rs  auth_integration.rs  backend.rs  basedb.rs  data.rs  entry.rs  helpers.rs  main.rs  mod.rs  subtree.rs  tree.rs
