[workspace]
members = ["crates/lib", "crates/bin"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
chrono = ">= 0.3"
base64ct = { version = "1.6", features = ["std"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1"
sha2 = ">= 0.9"
thiserror = "1"
typetag = "0.2.2"
uuid = { version = "1", features = ["v4"] }
yrs = "0.23"
signal-hook = "0.3"
tempfile = "3.0"

# Profile configuration for optimizing builds
[profile.dev]
# Keep the local package as debug build for fast compilation
opt-level = 0
# But compile dependencies with optimizations for better performance
[profile.dev.package."*"]
opt-level = 3