[package]
name = "eidetica-todo"
version = "0.1.0"
edition = "2021"
description = "A simple CLI todo list app using Eidetica"
publish = false

[dependencies]
eidetica = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
